Fixed some spacing issues in chat.css volunteers.

--- a/static/users/chat/chat.css
+++ b/static/users/chat/chat.css
@@ -82,6 +82,7 @@
 .messages-container {
   flex-grow: 1;
   overflow-y: auto;
+  margin: 10px;
   padding-right: 30px;
 }
 
