--- a/static/volunteers/chat/chat.css
+++ b/static/volunteers/chat/chat.css
@@ -9,6 +9,7 @@ body {
     gap: 20px;
     width: 80%;
     margin-left: 40px;
+    margin-top: 20px;
 }
 
 .main-section {
@@ -50,6 +51,7 @@ body {
   width: 60%;       
   margin-left: 40px;
   color: rgb(214,210,181);   
+  margin-top: 20px;
 }
 
  .chat-container {
@@ -82,6 +84,7 @@ body {
 .messages-container {
   flex-grow: 1;
   overflow-y: auto;
+  margin: 10px;
   padding-right: 30px;
 }
 
